syntax = "proto3";

package notification;

option go_package = "./";

import "google/protobuf/timestamp.proto";

// ============================================
// NOTIFICATION SERVICE
// ============================================

service NotificationService {
  rpc GetNotifications(GetNotificationsRequest) returns (NotificationConnection);
  rpc MarkRead(MarkReadRequest) returns (Response);
  rpc MarkAllRead(MarkAllReadRequest) returns (Response);
  rpc CreateNotification(CreateNotificationRequest) returns (Notification);
  rpc DeleteNotification(DeleteNotificationRequest) returns (Response);
}

// ============================================
// ENUMS
// ============================================

enum NotificationType {
  NOTIFICATION_TYPE_UNSPECIFIED = 0;
  POST = 1;
  COMMENT = 2;
}

// ============================================
// MESSAGES
// ============================================

message GetNotificationsRequest {
  string user_id = 1;
  int32 first = 2;
  optional string after = 3;
}

message MarkReadRequest {
  string notification_id = 1;
  string user_id = 2;
}

message MarkAllReadRequest {
  string user_id = 1;
}

message CreateNotificationRequest {
  string user_id = 1;
  NotificationType type = 2;
  string message = 3;
  optional string actor_id = 4;
  optional string related_id = 5; // postId, commentId, etc.
}

message DeleteNotificationRequest {
  string notification_id = 1;
}

message Notification {
  string id = 1;
  string user_id = 2;
  NotificationType type = 3;
  string message = 4;
  optional string actor_id = 5;
  optional string related_id = 6;
  bool is_read = 7;
  google.protobuf.Timestamp created_at = 8;
}

message NotificationEdge {
  string cursor = 1;
  Notification node = 2;
}

message PageInfo {
  optional string end_cursor = 1;
  bool has_next_page = 2;
  optional string start_cursor = 3;
  bool has_previous_page = 4;
}

message NotificationConnection {
  repeated NotificationEdge edges = 1;
  PageInfo page_info = 2;
  int32 total_count = 3;
  int32 unread_count = 4;
}

message Response {
  bool success = 1;
  string message = 2;
}